# talio-blockchain

./: .gitignore  README.md  docker-compose.yaml
docker/: Dockerfile
nginx-conf/: nginx.conf
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs  testnet_fixtures.rs
pallets/account/: Cargo.toml
pallets/account/src/: lib.rs  mock.rs  tests.rs
pallets/certificate/: Cargo.toml
pallets/certificate/src/: lib.rs  mock.rs  tests.rs
pallets/cv/: Cargo.toml
pallets/cv/rpc/: Cargo.toml
pallets/cv/rpc/runtime-api/: Cargo.toml
pallets/cv/rpc/runtime-api/src/: lib.rs
pallets/cv/rpc/src/: lib.rs
pallets/cv/src/: lib.rs  mock.rs  tests.rs
pallets/hierarchy-system/: Cargo.toml
pallets/hierarchy-system/src/: hierarchy.rs  lib.rs  mock.rs  tests.rs
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
resource/scv/: scv.json
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: mod.rs
scripts/: docker_run.sh  run.sh
tests/test-js/: README.md  account.js  create_cer.js  create_cer.ts  create_certificate.js  create_cv.ts  list_account.js  list_certificate.js  list_hierarchy.js  package-lock.json  package.json  tsconfig.json  upgrade_onchain.js  validate_cer.ts  validate_org.js  validate_sys.js
