[package]
name = "scv-chain"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-scv-chain/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "scv-chain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.25"
hex-literal = "0.3.4"
futures = "0.3.21"
jsonrpc-core = "18.0.0"
clap = { version = "3.0", features = ["derive"] }
tempfile = "3.3.0"

sc-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-service = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-telemetry = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-network = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-service-test = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-keyring = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-inherents = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-tracing = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

node-primitives = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
node-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

# These dependencies are used for the node template's RPCs
sc-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-rpc-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-basic-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-chain-spec = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
pallet-im-online = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-authority-discovery = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sc-authority-discovery = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
frame-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
# SCV Dependencies
scv-node = {  path = "../runtime" }
pallet-cv-rpc= { version = "1.0.0", path = "../pallets/cv/rpc" }
pallet-cv-rpc-runtime-api = { version = "1.0.0", path = "../pallets/cv/rpc/runtime-api" }

pallet-utils = { version = "0.0.1", path = "../pallets/utils"}

hierarchy-system = { version = "4.0.0-dev", path = "../pallets/hierarchy-system"}
[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

[features]
default = []
runtime-benchmarks = [
	"scv-node/runtime-benchmarks",
]
