[package]
name = "pallet-account"
version = "1.0.0"
description = "FRAME pallet account for defining account's information."
authors = ["hoangtheanhhp <https://github.com/hoangtheanhhp>"]
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log ={default-features = false, version = "0.4.14"}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
frame-system = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
frame-benchmarking = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true }

sp-std = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
pallet-utils = { version = "0.0.1", default-features = false, path = "../utils" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-utils/std",
	"sp-std/std",
	"log/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
