[package]
name = "hierarchy-system"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-scv-chain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = {default-features = false, version = "0.4.14"}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
frame-system = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
frame-benchmarking = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true }

sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-std = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
serde = { default-features = false, version = "1.0.119", features =["derive"]}

pallet-account = {default-features = false, path ="../account"}
pallet-utils = {default-features = false, path ="../utils"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"pallet-account/std",
	"pallet-utils/std",
	"log/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
