[package]
name = "pallet-cv-rpc"
version = "1.0.0"
authors = ["SmartCv Developer"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for the pallet cv."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
pallet-cv-rpc-runtime-api = { version = "1.0.0", path = "./runtime-api" }
sp-std = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
pallet-cv = {version = "1.0.0", path = "../../cv"}