[package]
name = "pallet-cv-rpc-runtime-api"
version = "1.0.0"
authors = ["SmartCv Developer"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for pallet cv"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = {  default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
sp-std = {  default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
pallet-cv = {version = "1.0.0", default-features = false, path ="../../../cv"}
[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"codec/std"
]